# nai-studio-local

./: .gitignore  CHANGELOG.md  PR_v2-tauri.md  README.md  UPDATE_NOTES.md  commit_msg.md  package-lock.json  package.json  start.bat  stop.bat  用户手册.md
.github/workflows/: release.yml
cgi-bin/: batch_export.pl  extract_meta.pl  tag_health.pl  thumb.pl
data/: schema_sqlite.sql
public/: .htaccess  index.php  router.php
public/api/: ai_analyze.php  anlas.php  api-keys.php  artist_presets.php  artists.php  backend.php  character_presets.php  cleanup.php  danbooru.php  decompose.php  gallery.php  generate.php  import_meta.php  pose-dict.php  pose_presets.php  prompts.php  proxy.php  settings.php  settings_ai.php  tag_image.php  tags.php  upload.php
public/api/admin/: expand-tags.php  fetch_all_images.php  import-all-tags.php
public/assets/css/: components.css  main.css  mask-editor.css  tag-picker.css  themes.css
public/assets/js/: actions.js  ai-settings.js  api.js  app.js  artist_library.js  base-image.js  characters.js  decomposer.js  director.js  gallery.js  generate-payload.js  import.js  keyboard.js  panel.js  pose.js  precise.js  preset-modal.js  presets.js  project-queue.js  prompt.js  queue.js  settings.js  state.js  storage.js  tag-picker.js  toast.js  vibe.js
schema/: 001_init.sql  002_categories.sql  003_pose_character_presets.sql  004_seed_pose_character.sql  005_translate_proxy.sql  006_api_keys.sql  007_decompose_translate.sql  008_artist_library.sql  009_deepseek.sql  010_ai_provider.sql
seed/: seed_categories.php  seed_tags.php
src/: bootstrap.php  config.php  index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: encryption.rs  error.rs  lib.rs  main.rs  nai_api.rs  paths.rs  server.rs  state.rs
src-tauri/src/api/: ai_analyze.rs  ai_client.rs  anlas.rs  api_keys.rs  artist_presets.rs  artists.rs  backend.rs  character_presets.rs  cleanup.rs  danbooru.rs  decompose.rs  gallery.rs  generate.rs  import_meta.rs  mod.rs  pose_dict.rs  pose_presets.rs  prompts.rs  proxy.rs  settings.rs  settings_ai.rs  status.rs  tag_image.rs  tags.rs  upload.rs  upscale.rs
src-tauri/src/api/admin/: expand_tags.rs  fetch_all_images.rs  import_all_tags.rs  mod.rs
src-tauri/src/db/: connection.rs  migrations.rs  mod.rs
src-tauri/src/http/: mod.rs  response.rs  rewrite.rs  routes.rs
src-tauri/src/ui/: app.rs  command.rs  fonts.rs  http_client.rs  icons.rs  mod.rs  theme.rs
src-tauri/src/ui/views/: gallery.rs  history_strip.rs  home.rs  left_panel.rs  mod.rs  settings.rs  tags.rs
src/assets/css/: components.css  gallery.css  main.css
src/assets/js/: actions.js  ai-compose.js  ai-settings.js  api.js  app.js  characters.js  decomposer.js  gallery.js  mask-editor.js  mention-presets.js  preset-combobox.js  preset-modal.html  project-queue.js  prompt.js  queue.js  settings.js  tag-picker.js  upscale.js
src/lib/: AiAdvisor.php  AiProvider.php  ApiKeyManager.php  ArtistAdvisor.php  ArtistManager.php  DanbooruArtistFetcher.php  DanbooruClient.php  Db.php  DeepSeekHelper.php  Encryption.php  GalleryManager.php  Logger.php  MetadataExtractor.php  NaiApi.php  PoseDict.php  PromptParser.php  Settings.php  Splitter.php  TagClassifier.php  TagDict.php  TagManager.php  Translator.php
storage/cache/: expand-done.txt  expand-status.json  import-done.txt  import-status.json
tests/: make-favicon.py  nstest.php  test-db.php  test-list-for-zip.php  test-pose-dict.php
tools/: _commit_msg.txt  expand_tags_cli.php  fetch_all_images_cli.php  fetch_all_tag_images.php  fix_frontend_paths.cjs  migrate_mysql_to_sqlite.php  migrate_sqlite_to_mysql.php  php_server.cmd  php_to_html.cjs  start.bat  stop.bat
translate-server/: README.md  download_essential.ps1  download_merged.ps1  download_model.ps1  download_nllb.ps1  download_quantized.ps1  fix_cache.ps1  fix_symlink.ps1  package-lock.json  package.json  server.js  start.bat  stop.bat
