[package]
name = "nai-studio-desktop"
version = "0.1.0"
description = "NAI Studio Desktop — Tauri + Rust + SQLite, full rewrite of nai-studio PHP version"
authors = ["ywclg"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "nai_studio_lib"
crate-type = ["lib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
# Tauri 核心
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-single-instance = "2"  # 防止重复启动

# 异步运行时 + HTTP server
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["macros", "multipart"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
hyper = "1"

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 数据库
rusqlite = { version = "0.32", features = ["bundled"] }

# HTTP 客户端（NAI / Danbooru）
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip", "brotli"] }

# 实用工具
anyhow = "1"
thiserror = "1"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
once_cell = "1"
parking_lot = "0.12"
bytes = "1"
mime_guess = "2"
percent-encoding = "2"
form_urlencoded = "1"
dirs = "5"
base64 = "0.22"
rand = "0.8"
zip = "0.6"  # NAI 返回 ZIP 提取
aes-gcm = "0.10"  # API key 加密
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }  # 缩略图
walkdir = "2"  # 递归目录（cleanup / upload）
sha2 = "0.10"  # 文件 hash（upload）
hex = "0.4"  # 16 进制编码（upload / import）

[profile.release]
opt-level = "s"  # 体积优化
lto = true
codegen-units = 1
strip = true
panic = "abort"
